<resources>
    <string name="app_name">moneytransfer</string>
    <string name="title_font">sans-serif-black</string>
    <string name="bold_font">sans-serif-black</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="loginpage_text0">Login</string>
    <string name="loginpage_text1">Welcome back,</string>
    <string name="loginpage_text2">Sign in to continue</string>
    <string name="loginpage_text3">Forgot password?</string>
    <string name="loginpage_text4">Don\'t have an account?</string>
    <string name="loginpage_text5">Create account</string>

</resources>